syntax = "proto3";

package jonline;

import "google/protobuf/timestamp.proto";

import "visibility_moderation.proto";

// Valid GetMediaRequest formats:
// - `{user_id: "123"}` - Gets the media of the given user that the current user can see. IE:
//     - *all* of the current user's own media
//     - `GLOBAL_PUBLIC` media for the user if the current user is not logged in.
//     - `SERVER_PUBLIC` media for the user if the current user is logged in.
//     - `LIMITED` media for the user if the current user is following the user.
// - `{media_id: "123"}` - Gets the media with the given ID, if visible to the current user.
message GetMediaRequest {
  // Returns the single media item with the given ID.
  optional string media_id = 1;
  // Returns all media items for the given user.
  optional string user_id = 2;

  uint32 page = 11;
}

message GetMediaResponse {
  repeated Media media = 1;
  bool has_next_page = 2;
}


// A Jonline `Media` object represents a single media item, such as a photo or video.
// Media data is deliberately *not returnable from the gRPC API*. Instead, the client
// should fetch media from `http[s]://my.jonline.instance/media/{id}`.
//
// Media objects may be created with a POST or PUT to `http[s]://my.jonline.instance/media`.
// On success, the endpoint will return the media ID.
//
// HTTP Media endpoints support supplying the Access Token in a `jonline-media-access` cookie,
// or via a `jonline_access_token` query parameter.
// Fetching media without authentication requires that it has `GLOBAL_PUBLIC` visibility.
message Media {
  // The ID of the media item.
  string id = 1;
  // The MIME content type of the media item.
  string content_type = 3;
  // The ID of the user who created the media item.
  optional string user_id = 2;
  // An optional title for the media item.
  optional string name = 4;
  // An optional description for the media item.
  optional string description = 5;
  // Visibility of the media item.
  Visibility visibility = 6;
  // Moderation of the media item.
  Moderation moderation = 7;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}
